<resources>
    <string name="app_name">Bitcare</string>
    <string name="strEstatistica">estatística</string>
    <string name="strBpm">bpm</string>
    <string name="srtMedicamento">medicamentos</string>
    <string name="txtValorBpm">000</string>
    <string name="strBtnLogin">Entrar</string>
    <string name="strSenha">Senha</string>
    <string name="strUsuario">Usuário</string>
    <string name="txtErroLogin" />
    <string name="strUsuarioEstatistica">Nome do Usuário é Longo</string>
    <string name="strIdade" >112</string>
    <string name="strAnos" >anos</string>
</resources>
