<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bpm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textAlignment="textEnd"
    tools:context="bitcare.com.br.bitcare.BpmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:orientation="horizontal"
        android:padding="0dp"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/btnEstatistica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_chart_bar"
            android:text="@string/strEstatistica"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/btnBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:drawableTint="@android:color/background_light"
            android:drawableTop="@drawable/ic_heart"
            android:text="@string/strBpm"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnMedicamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:drawableTop="@drawable/ic_pill"
            android:text="@string/srtMedicamento"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        android:id="@+id/layBpm">

        <TextView
            android:id="@+id/txtValorBpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtValorBpm"
            android:textAlignment="textEnd"
            android:textSize="106sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_heart"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:tint="@color/colorPrimary"/>

            <TextView
                android:id="@+id/txtBpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bpm"
                android:textAlignment="viewStart"
                android:textSize="36sp"
                android:textStyle="normal"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lstBpm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
