<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="bitcare.com.br.bitcare.LoginActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/layUser">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_account"
            android:id="@+id/icnAccount"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/fieldLogin"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:layout_weight="1"
            android:hint="@string/strUsuario"
            tools:ignore="InefficientWeight" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:id="@+id/layPassword">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_lock_outline"
            android:layout_weight="0"
            android:baselineAlignBottom="true"
            android:id="@+id/icnPassoword"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="10dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:background="@android:color/background_light"
            android:id="@+id/fieldPassword"
            android:layout_weight="1"
            android:hint="@string/strSenha"/>
    </LinearLayout>

    <Button
        android:text="@string/strBtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:id="@+id/btnLogin"
        android:textColor="@color/colorPrimary"
        android:onClick="toBpm" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_bitcare"
        android:id="@+id/imageView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp" />

</RelativeLayout>
